react cropper problem fix
image preview width height problem solving.
cropper will show after choosing image before that  you can see only skeleton image.

--- a/src/index.css
+++ b/src/index.css
@@ -185,4 +185,8 @@ ul {
   outline: none !important;
   font-family: "Nunito", sans-serif !important;
 }
+.img-preview {
+  width: 70px !important;
+  height: 70px !important;
+}
 /* dp modal replace css end */
